<resources>
    <string name="app_name">App Jose Cañas</string>
    <string name="sdk_token_storage">SDK_TOKEN</string>
    <string name="text_touch_press">Presione para recibir \n sonido</string>
    <string name="text_touch_Despress">Presione para dejar de escuchar</string>
    <string name="standard2">standard2</string>
    <string name="standard2_wideband">standard2_wideband</string>
    <string name="pkab2">pkab2</string>
    <string name="pkab2_wideband">pkab2_wideband</string>
    <string name="please_enter_your_sdk_token">Please enter your SDK Token</string>
    <string name="lisnr_logo">LISNR Logo</string>
    <string name="sdk_token">SDK Token</string>
    <string name="save">Save</string>
    <string name="app_version">App Version:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="error_view_log">Error (View log for details)</string>
    <string name="mic_permission_denied">Permission to use the microphone denied. Please enable it the App Settings to utilize the receive functionality.</string>
    <string name="invalid_token_please_enter_a_valid_token">Invalid token - Please enter a valid token</string>
    <string name="account_expiration">Account Expiration</string>
    <string name="_07_28_2039">07/28/2039</string>
    <string name="transmit">Transmit</string>
    <string name="receive">Receive</string>
    <string name="transmit_underscore"><u>Transmit</u></string>
    <string name="receive_underscore"><u>Receive</u></string>
    <string name="edit_token"><u>Edit Token</u></string>
    <string name="sdk_state">SDK State:</string>
    <string name="tone_profile">Tone Profile:</string>
    <string name="payload_">Payload:</string>
    <string name="random_payload">Random Payload (size):</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="transmit_single_tone">Transmit (Single Tone)</string>
    <string name="start_transmit">Start Transmit</string>
    <string name="stop_transmit">Stop Transmit</string>
    <string name="payload_to_send">Payload to Send</string>
    <string name="beacon">Beacon</string>
    <string name="start_beacon">Start Beacon</string>
    <string name="stop_beacon">Stop Beacon</string>
    <string name="beacons_played">Beacons Played:</string>
    <string name="_0">0</string>
    <string name="clear_underscore"><u>Clear</u></string>
    <string name="clear">Clear</string>
    <string name="idle">Idle</string>
    <string name="start_receiving">Start Receiving</string>
    <string name="stop_receiving">Stop Receiving</string>
    <string name="is_transmit">IsTransmit</string>
    <string name="empty" />
    <string name="send_payload">Send Payload</string>
    <string name="payload_random_text">0123456789 AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz</string>
    <string name="payload_text_content_error">NOTE: Entered payload contains non-printable characters. These will be represented on the Receive fragment as \uFFFD.</string>
    <string name="payload_text_length_error">ERROR: Entered payload is too large for profile type.</string>
    <string name="error_message_use_pkab2">For large payloads, it\'s recommended to use the pkab2 or pkab2_wideband tone profile.</string>
    <string name="payloads_received">Payloads Received:</string>
    <string name="time">Time</string>
    <string name="payload_receive">Payload</string>
    <string name="audio_recording">Audio Recording</string>

    <string name="signal_strength">Signal Strength:</string>
    <string name="signal_quality">Signal Quality:</string>
    <string name="header">Header</string>
    <string name="type">Type:</string>
    <string name="profile">Profile:</string>
    <string name="bytes">Bytes:</string>

    <string name="great">Great</string>
    <string name="good">Good</string>
    <string name="poor">Poor</string>
    <string name="bad">Bad</string>
    <string name="payload__">Payload:</string>
    <string name="empty_string" />
    <string name="receiving">Receiving</string>
    <string name="Disabled">Disabled</string>
    <string name="anim_handler_thread">animHandlerThread</string>
    <string name="anim_handler_thread_speaker">animHandlerThreadSpeaker</string>
    <string name="anim_handler_thread_mic">animHandlerThreadMic</string>
    <string name="time_format">HH:mm:ss</string>
    <string name="permissions_denied">Microphone permissions denied. Please enable them in app settings.</string>
    <string name="permissions_not_granted">Microphone permissions not granted</string>
    <string name="requesting_mic_permissions">Requesting Microphone Permissions</string>
    <string name="in_a_moment">In a moment \"</string>
    <string name="permission_request_details">\" will request permission to access your microphone. Microphone access is used only to listen for high-frequency data tones. Your data is only processed locally on this device.  Data can be saved via the recording option within (and only within) our bundled Sample App.  The Radius SDK, itself, does not include recording capabilities.</string>
    <string name="ok">OK</string>
    <string name="please_enter_an_sdk_token">Please enter an SDK token</string>
    <string name="forward_slash">/</string>
    <string name="transmitting">Transmitting</string>
    <string name="finishing_transmission">Finishing Transmission</string>
    <string name="beaconing">Beaconing</string>
    <string name="finishing_beacon">Finishing Beacon</string>
    <string name="disabled">Disabled</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="exp">exp</string>
    <string name="token_split">\\.</string>
    <string name="token_storage_location">RadiusSampleApp</string>
    <string name="payload_time_profile_format">%s\n(%s)</string>
    <string name="token_error">SDK Token Error:</string>
    <string name="permissions_requested">PERMSSIONS_REQUESTED</string>
    <string name="active_recording">This app is unable to receive tone payloads when recording is turned on\n\n</string>
    <string name="recording_to">Recording to file:</string>
    <string name="token">token</string>
    <string name="link_token_invalid">NOTE: The token supplied from the link is invalid. The app is currently using previously stored valid token.</string>
    <string name="link_token_invalid_log_message">Token provided from link is invalid:</string>
    <string name="payload_empty_log_message">Payload cannot be empty</string>
    <string name="invalid_payload_error">Error - Invalid Payload</string>
    <string name="db_format">%.2f dB</string>
    <string name="error_message">error_message</string>
    <string name="transceive">Transceive</string>
    <string name="transceive_underscore"><u>Transceive</u></string>
    <string name="is_transceive">IsTransceive</string>
    <string name="configuration">Configuration</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_cupones">Cupones</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_start">Volver al Inicio</string>
    <string name="menu_user">Usuario/Registro</string>
    <string name="menu_configuration">Configuración</string>
    <string name="menu_history">Historial</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_pays">Pagos</string>
    <string name="menu_tickets">Tiquetes</string>
    <string name="menu_info">Información</string>
    <string name="menu_go_out">Salir</string>
    <string name="home_shops">Tiendas</string>
    <string name="home_restaurants">Restaurantes</string>
    <string name="home_cars">Rent a Car</string>
    <string name="home_info">Información</string>


    <string name="tv_title_loggin">Ingresar</string>
    <string name="tv_login_email">Correo electrónico</string>
    <string name="tv_login_user">Usuario</string>
    <string name="tv_not_acount">¿No tiene una cuenta?</string>
    <string name="tv_login_password">Contraseña</string>
    <string name="tv_login_confirm_password">Confirmar contraseña</string>
    <string name="tv_number_phone">NÚMERO DE TELÉFONO</string>
    <string name="tv_recover_password">¿Ha olvidado su contraseña?</string>
    <string name="tv_register">Registrarse</string>
    <string name="tv_terminos_condiciones">Estoy de acuerdo con los </string>
    <string name="btn_terminos_condiciones"><u>Términos y condiciones </u></string>


    <string name="tv_create_account">Crear cuenta</string>
    <string name="tv_reg_name_hint">Nombre (Requerido)</string>
    <string name="tv_reg_lastname_hint">Apellido (Requerido)</string>
    <string name="tv_reg_nameuser_hint">Nombre de usuario (Requerido)</string>
    <string name="tv_password_actual">Contraseña actual (Requerido)</string>
    <string name="tv_password_new">Contraseña nueva (Requerido)</string>
    <string name="tv_password_confirm">Confirmar contraseña (Requerido)</string>

    <string name="tv_allow_notifications">Permitir Notificaciones</string>
    <string name="tv_allow_notifications_description">Permite que la aplicación envíe notificaciones para que pueda realizar todos los servicios de forma correcta.</string>

    <string name="tv_allow_microphone">Acceso al Micrófono</string>
    <string name="tv_allow_microphone_description">Permite que la aplicación tenga acceso al micrófono para que pueda realizar todos los servicios de forma correcta.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_home">NavigationHomeActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="button_create_account">Crear cuenta</string>
    <string name="button_enter_account">Ingresar</string>

    <string name="hint_name_user">Nombre de usuario</string>
    <string name="hint_password">Ingrese su contraseña</string>
    <string name="hint_mail">Ingrese su correo</string>
    <string name="hint_password_confirm">Confirme su contraseña</string>
    <string name="hint_already_have_account">¿Ya tiene una cuenta?</string>
</resources>