<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lisnrapp.ui.home.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_tickets"
        android:name="com.lisnrapp.ui.home.tickets.TicketsFragment"
        android:label="@string/menu_tickets"
        tools:layout="@layout/fragment_tickets" />

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.lisnrapp.ui.home.mapa.MapaFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_cupones"
        android:name="com.lisnrapp.ui.home.cupones.CuponesFragment"
        android:label="@string/menu_cupones"
        tools:layout="@layout/fragment_cupones" />

</navigation>