<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toStartOf="@+id/text_payload"
        app:layout_constraintStart_toEndOf="@+id/image_arrow"
        app:layout_constraintTop_toTopOf="@+id/image_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/image_arrow"
        app:layout_constraintWidth_percent="0.50" />

    <TextView
        android:id="@+id/text_payload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:paddingStart="4dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_time"
        app:layout_constraintTop_toTopOf="@+id/text_time"
        app:layout_constraintBottom_toBottomOf="@+id/text_time" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_hidden_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_payload"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_pkab_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_profile"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/text_signal_quality_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="4dp"
                android:text="@string/signal_quality"
                app:layout_constraintBottom_toBottomOf="@id/text_header_quality"
                app:layout_constraintStart_toStartOf="@id/text_signal_strength_label"
                app:layout_constraintTop_toTopOf="@id/text_header_label" />

            <TextView
                android:id="@+id/text_signal_strength_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="4dp"
                android:text="@string/signal_strength"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_payload_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@id/text_payload_label"
                app:layout_constraintEnd_toEndOf="@id/text_payload_label"
                app:layout_constraintTop_toBottomOf="@id/text_payload_label" />

            <TextView
                android:id="@+id/text_header_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/header"
                app:layout_constraintStart_toEndOf="@id/text_signal_quality_label"
                app:layout_constraintTop_toBottomOf="@id/text_signal_strength_label" />

            <TextView
                android:id="@+id/text_header_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@id/text_header_label"
                app:layout_constraintEnd_toEndOf="@id/text_header_label"
                app:layout_constraintTop_toBottomOf="@id/text_header_label" />

            <TextView
                android:id="@+id/text_payload_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/payload_receive"
                app:layout_constraintHorizontal_bias="0.48"
                app:layout_constraintStart_toEndOf="@id/text_header_label"
                app:layout_constraintTop_toTopOf="@id/text_header_label" />

            <TextView
                android:id="@+id/text_signal_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                app:layout_constraintStart_toEndOf="@id/text_signal_strength_label"
                app:layout_constraintTop_toTopOf="@id/text_signal_strength_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/text_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="4dp"
            android:text="@string/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.65" />

        <TextView
            android:id="@+id/text_bytes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/bytes"
            app:layout_constraintStart_toEndOf="@id/text_profile"
            app:layout_constraintTop_toTopOf="@id/text_profile"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>