<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".LogginActivity">

    <ImageView
        android:id="@+id/img_loggin_logo"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_marginVertical="80dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />
    <TextView
        android:id="@+id/tv_title_loggin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/tv_title_loggin"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textColor="@color/colorTextWhite"
        android:layout_below="@+id/img_loggin_logo"
        android:textSize="21sp"
        android:fontFamily="@font/circeextrabold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:layout_below="@+id/tv_title_loggin"
        android:paddingLeft="25dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="25dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/tv_login_user"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextGray"
            android:textSize="15sp"
            android:fontFamily="@font/circebold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTint="@color/colorEditsTextLightBlue"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="19dp"
                android:src="@drawable/usuario"/>

            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_marginVertical="3sp"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:hint="Nombre de usuario"
                android:background="@null"
                android:textColor="@color/colorTextGray"
                android:textColorHint="@color/colorTextGray"
                android:textSize="14sp" />

        </LinearLayout>



        <TextView
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_login_password"
            android:textAlignment="textStart"
            android:textColor="@color/colorTextGray"
            android:textSize="15sp"
            android:fontFamily="@font/circebold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/rounded_edit_text"
            android:backgroundTint="@color/colorEditsTextLightBlue"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="19dp"
                android:src="@drawable/contrasena"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_marginVertical="3sp"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:hint="Ingrese su contraseña"
                android:background="@null"
                android:textColor="@color/colorTextGray"
                android:textColorHint="@color/colorTextGray"
                android:textSize="14sp" />
            <ToggleButton
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:textOn=""
                android:textOff=""
                android:layout_marginRight="19dp"
                android:checked="false"
                android:background="@drawable/mostrar"/>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/pgbLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btncreateAcount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/crearcuenta_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/tv_noAcount_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_not_acount"
                android:layout_marginLeft="55dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorTextGray"
                android:textSize="15sp"
                android:fontFamily="@font/circebold"/>

            <Button
                android:id="@+id/btn_noAcount_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_register"
                android:layout_marginLeft="10dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:background="#00C2C2C2"
                android:textColor="@color/colorTextLightBlue"
                android:textSize="17sp"
                android:fontFamily="@font/circeextrabold"/>

        </LinearLayout>





    </LinearLayout>

</RelativeLayout>